--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "example-rui-site",
   "version": "0.0.1",
   "scripts": {
-    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base ./public --hot --inline"
+    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base ./public --hot --inline",
+    "test": ""
   },
   "dependencies": {
     "bower": "^1.4.1",
-    "node-libs-browser": "^0.5.2",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "webpack": "^1.10.1",
