--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "webpack-dev-server --devtool eval --progress --colors --content-base ./public --hot --inline",
-    "test": ""
+    "test": "karma start --single-run=false"
   },
   "dependencies": {
     "bower": "^1.4.1",
@@ -16,11 +16,20 @@
   "devDependencies": {
     "babel-core": "^5.6.15",
     "babel-loader": "^5.3.1",
-    "style-loader": "^0.12.3",
+    "core-js": "^1.1.4",
     "css-loader": "^0.15.1",
-    "sass-loader": "^1.0.2",
-    "node-sass": "^3.2.0",
     "extract-text-webpack-plugin": "^0.8.2",
+    "jasmine": "^2.3.2",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.9",
+    "karma-cli": "^0.1.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-webpack": "^1.7.0",
+    "node-sass": "^3.2.0",
+    "phantomjs": "^1.9.18",
+    "sass-loader": "^1.0.2",
+    "style-loader": "^0.12.3",
     "webpack-dev-server": "^1.10.1"
   }
 }
