--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "karma-cli": "^0.1.0",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
+    "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
     "node-sass": "^3.2.0",
     "phantomjs": "^1.9.18",
