--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jasmine": "^2.3.2",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.9",
+    "karma-chrome-launcher": "^0.2.1",
     "karma-cli": "^0.1.0",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
