--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   },
   "dependencies": {
     "bower": "^1.4.1",
+    "lodash": "^3.10.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
-    "webpack": "^1.10.1",
     "rest": "^1.3.1",
+    "webpack": "^1.10.1",
     "when": "^3.7.3"
   },
   "devDependencies": {
