--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
   },
   "dependencies": {
     "bower": "^1.4.1",
-    "lodash": "^3.10.1",
-    "react": "^0.13.3",
-    "react-router": "^0.13.3",
+    "react": "^0.14.3",
+    "redux": "^3.0.4",
     "rest": "^1.3.1",
-    "webpack": "^1.10.1",
-    "when": "^3.7.3"
+    "webpack": "^1.10.1"
   },
   "devDependencies": {
     "babel-core": "^5.6.15",
