--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bower": "^1.4.1",
     "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "redux": "^3.0.4",
     "rest": "^1.3.1",
     "webpack": "^1.10.1"
